# forther

./: .gitignore  flake.nix  forther.cabal  readme.md
app/: Main.hs
examples/: fizzbuzz.forther  immediate.forther  immediate_2.forther  multiline.forther
src/: BinTree.hs  CharProducer.hs  Dictionary.hs  HasState.hs  IOBuffer.hs  IOPeekBuffer.hs  Lexer.hs  MonadLift.hs  Repl.hs  Result.hs  Save.hs  Stack.hs  State.hs  Token.hs  Token.hs-boot
src/Repl/: Machine.hs  Repl.hs  Types.hs
test/: Testing.md
